starting getting ai thing done

--- a/assets/myapp/templates/graph.html
+++ b/assets/myapp/templates/graph.html
@@ -222,9 +222,6 @@
 </div>
 
 <script>
-    
-
-
     // This function will update the UI based on the current user and the node's contributor
     function updateNodeButtons(nodeData) {
         // Check if the current user is the contributor of the node
@@ -275,6 +272,14 @@
         return 'exampleNodeId'; // Replace this with actual logic
     }
 </script>
+
+
+<div id="bib-overlay" class="bib-overlay" style="display: none;">
+    <div class="bib-loader">
+      <p>Please wait, processing bibliography...</p>
+    </div>
+</div>
+  
 
 
 <div class="bib-container" id ="bib-container" style="display:none;">
