finished file export

--- a/assets/myapp/static/myapp/graph.css
+++ b/assets/myapp/static/myapp/graph.css
@@ -18,7 +18,7 @@
     margin-left: 20px;
 }
 
-.add-node {
+.banner-label {
     background-color: white; 
     border: none; /* Remove border */
     color:rgba(0, 128, 128, 0.932); /* Blue text */
