--- a/assets/myapp/templates/graph.html
+++ b/assets/myapp/templates/graph.html
@@ -23,7 +23,7 @@
    
     var nodes = graphData.nodes.filter(node => !node.data.isTimelineNode);
     
-
+    var availableSources = [];
     var edges = graphData.edges;
 
 
