made some improvements

--- a/assets/myapp/templates/graph.html
+++ b/assets/myapp/templates/graph.html
@@ -227,13 +227,13 @@
 
         
         <div class="node-attribute">
-            <p><strong>year Created:</strong></p>
+            <p><strong>Year Created:</strong></p>
             <p id="source-year-created">N/A</p> 
         </div>
 
         
         <div class="node-attribute">
-            <p><strong>year Discovered:</strong></p>
+            <p><strong>Year Discovered:</strong></p>
             <p id="source-year-discovered">N/A</p> 
         </div>
         <div class="node-attribute">
